# lnd-nwc

./: LICENSE  README.md
lnd-nwc/: .gitignore  Cargo.toml  build.rs
lnd-nwc/src/: config.rs  grpc.rs  lnd.rs  lnd_config.rs  main.rs  main_test.rs  nostr.rs  nostr_config.rs  nwc_types.rs  uri.rs  uri_config.rs
lnd-nwc/src/rpc/: lnrpc.rs
